tests/misc_tests/type_eq_ui_tests/stw_macro_variant_attribute-err.stderr
error: cannot find attribute `asdkaspokaopskd` in this scope
 --> tests/misc_tests/type_eq_ui_tests/stw_macro_variant_attribute-err.rs:3:11
  |
3 |         #[asdkaspokaopskd]
  |           ^^^^^^^^^^^^^^^
